--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="A product of emergent.sh" />
         <meta name="description" content="A product of emergent.sh" />
-    <title>Emergent | Fullstack App</title>
+    <title>Furniture</title>
          <script src="https://assets.emergent.sh/scripts/emergent-main.js"></script>
         <!--
         These two scripts have been added for the Visual Edits, please do not edit or remove them
